--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
